signin widget rendering and recieving a token

--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -3,6 +3,7 @@
 @import "onboardingNavLinks";
 @import "navigation";
 @import "onboarding";
+@import "login";
 @import "postLogin";
 @import "dataUpload";
 @import "congratulations";
