filter by genre and year

--- a/src/components/dashboard/_Navigation.scss
+++ b/src/components/dashboard/_Navigation.scss
@@ -147,6 +147,9 @@
     .Year:hover .dropdown{
       display: block;
     }
+    .Genre:hover .dropdown{
+      display: block;
+    }
 
     //menuchanges end
     .Links {
