--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -1,5 +1,5 @@
 .container.recommendations {
-    // font-family: $workSans;
+    font-family: $workSans;
     min-height: 100vh;
     background: linear-gradient(
       to bottom,
