--- a/src/scss/components/_recommendations.scss
+++ b/src/scss/components/_recommendations.scss
@@ -1,5 +1,5 @@
 .container.recommendations {
-  // font-family: $workSans;
+  //-family: $workSans;
   background: linear-gradient(
     to bottom,
     black 0%,
