--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,4 +1,6 @@
 .mainContainer {
+  font-family: $workSans;
+ 
   background: gray;
   padding: 1.1% 1%;
   .navContainer {
@@ -138,12 +140,18 @@
       border-bottom: 2px solid #383838;
       padding-left: 20px;
       &:hover{
-        background-color: #333;
+        background-color: #00E6BC;
+        color: black;
       }
     }
-
+    .Genre{
+      font-size: 1.3rem;
+    }
     .dropdown{
       display:none; 
+    }
+    .Year{
+      font-size: 1.3rem;
     }
     .Year:hover .dropdown{
       display: block;
