install @material-ui/core/styles, style login and signup forms

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $gray1:  #D8D8D8;
 $gray2: #21242C;
 $gray3: hsl(207, 100%, 4%);
 
-$black: #000A12;
+$black: #505050;
 $white: hsl(0, 0%, 100%);
 
 // color purposes here (will have to ask Martin or dig into Figma more for this)
