--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -89,8 +89,8 @@
     .bottom-form {
       width: 100%;
       display: flex;
-      justify-content: space-between;
-      margin: 3% 0;
+      flex-direction: column-reverse;
+      margin: 0;
 
       .check-box-container {
         display: flex;
@@ -104,17 +104,17 @@
       }
 
       .btn-container {
-        width: 60%;
+        width: 100%;
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         padding-bottom: 15px;
 
         .signup-btn,
         button.login-btn {
-          align-self: end;
+          // align-self: end;
           border: none;
           width: 100%;
-          max-width: 115px;
+          max-width: 100%;
           height: 36px;
           border-radius: 4px;
           background: #00e6bc;
@@ -126,13 +126,29 @@
     .bottomAccount {
       display: flex;
       flex-direction: column;
-      padding: 30px;
+      padding: 5%;
 
       .loginAccount {
         text-align: center;
         color: #2477e5;
         font-size: 18px;
       }
+      .link {
+          display: flex;
+          width: 100%;
+          height: auto;
+          font-size: 1rem;
+          text-decoration: none;
+          // justify-content: flex-end;
+          flex-direction: column-reverse;
+          align-items: center;
+          color: $white;
+      
+          &:hover {
+            color: $turqoise3;
+            font-weight: bold;
+          }
+        }
     }
     .callingError {
       color: red;
@@ -205,23 +221,79 @@
         }
       }
       .box-right {
-        width: 100%;
-        margin: 2%;
-        padding: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        border-radius: 0;
-        background: #505050;
-
-        // max-width: 100%;
+        margin: 2%;
+        padding: 0%;
+        border-radius: 4px;
+        background: $black;
+        width: 100%;
         height: 100%;
+    
         .form {
-          max-width: 90%;
+          justify-content: center;
+          max-width: 100%
+          
+        }
+    
+         .bottom-form {
+          width: 100%;
+          display: flex;
+          flex-direction: column-reverse;
+          margin: 0;
+    
+          .check-box-container {
+            display: flex;
+            flex-direction: row;
+            padding-top: 13px;
+            align-items: center;
+            p {
+              color: black;
+              white-space: nowrap;
+            }
+          }
+    
+          .btn-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding-bottom: 15px;
+    
+            .signup-btn,
+            button.login-btn {
+             align-items:center;
+              border: none;
+              width: 100%;
+              max-width: 100%;
+              height: 36px;
+              border-radius: 4px;
+              background: #00e6bc;
+              color: black;
+              font-size: 14px;
+              margin-top:3%;
+            }
+          }
+        }
+        .bottomAccount {
+          display: flex;
+          flex-direction: column;
+          padding: 2%;
+    
+          .loginAccount {
+            text-align: center;
+            color: #2477e5;
+            font-size: 18px;
+          }
+        }
+        .callingError {
+          color: red;
+          display: flex;
           justify-content: center;
         }
-        
       }
-    }
+    
+
+  }
   }
 }
