--- a/src/scss/components/_onboardingNavLinks.scss
+++ b/src/scss/components/_onboardingNavLinks.scss
@@ -13,21 +13,11 @@
     height: 2.5rem;
     width: auto;
   }
-  .link {
+  .signin-title{
     display: flex;
-    width: 100%;
-    height: auto;
-    font-size: 1rem;
-    text-decoration: none;
-    justify-content: flex-end;
-    align-items: center;
-    color: $white;
-
-    &:hover {
-      color: $turqoise3;
-      font-weight: bold;
-    }
+  justify-content: flex-start;
   }
+}
   @media (max-width: 600px) {
     img {
       // position: absolute;
@@ -36,14 +26,6 @@
       left: 130px;
       top: 102px;
     }
-    .link {
-      // flex-direction: column;
-      justify-content: flex-start;
-      // position: absolute;
-// width: 63px;
-height: 30px;
-left: 16px;
-top: 141px;
-    }
+    
   }
-}
+
