--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -118,7 +118,7 @@
           height: 36px;
           border-radius: 4px;
           background: #00e6bc;
-          color: black;
+          color: å$white;
           font-size: 14px;
         }
       }
@@ -269,7 +269,7 @@
               height: 36px;
               border-radius: 4px;
               background: #00e6bc;
-              color: black;
+              color: $white;
               font-size: 14px;
               margin-top:3%;
             }
