--- a/src/scss/components/_onboardingNavLinks.scss
+++ b/src/scss/components/_onboardingNavLinks.scss
@@ -10,22 +10,28 @@
     flex-direction: column;
   }
   img {
+    align-items: center;
     height: 2.5rem;
     width: auto;
   }
-  .signin-title{
+  .signin-title {
     display: flex;
-  justify-content: flex-start;
+    color:white;
+    // align-items: flex-start;;
   }
 }
-  @media (max-width: 600px) {
-    img {
-      // position: absolute;
-      width: 136px;
-      height: 38px;
-      left: 130px;
-      top: 102px;
-    }
+@media (max-width: 600px) {
+  img {
+    // position: absolute;
+    width: 136px;
+    height: 38px;
+    left: 130px;
+    top: 102px;
+  }
+  .signin-title {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 2%;
     
   }
-
+}
