--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -12,6 +12,10 @@ $gray3: hsl(207, 100%, 4%);
 $black: #505050;
 $white: hsl(0, 0%, 100%);
 
+
+$google-blue: #4285f4;
+$button-active-blue: #1669F2;
+
 // color purposes here (will have to ask Martin or dig into Figma more for this)
 //text
 $white-text: $white;
@@ -24,6 +28,8 @@ $secondary-accent: $turqoise2;
 // font
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:400,700,900&display=swap");
 $workSans: "Work Sans", sans-serif;
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
 
 // font sizing
 $baseFontSize: 10px;
