--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -64,11 +64,14 @@
     height: 550px;
 
     .form {
-      margin: auto;
-      padding: 3% 0;
-      max-width: 320px;
+      // margin: auto;
+      // padding: 3% 0;
+      // max-width: 320px;
       width: 100%;
-      color: $black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     }
 
     .form-control {
@@ -106,7 +109,8 @@
       .btn-container {
         width: 100%;
         display: flex;
-        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         padding-bottom: 15px;
 
         .signup-btn,
@@ -114,13 +118,55 @@
           // align-self: end;
           border: none;
           width: 100%;
-          max-width: 100%;
-          height: 36px;
+          max-width: 50%;
+          height: 50px;
           border-radius: 4px;
           background: #00e6bc;
-          color: å$white;
+          color: $black;
           font-size: 14px;
         }
+        
+      //Gogole Sign in btn
+      .google-btn {
+        width: 50%;
+        height: 50px;
+        background-color: $white;
+        border-radius: 4px;
+        box-shadow: 0 3px 4px 0 rgba(0,0,0,.25);
+        margin-top: 2%;
+        .google-icon-wrapper {
+          position: absolute;
+          margin-top: 4px;
+          margin-left: 1px;
+          width: 40px;
+          height: 40px;
+          border-radius: 2px;
+          background-color: $white;
+        }
+        .google-icon {
+          position: absolute;
+          margin-top: 11px;
+          margin-left: 11px;
+          width: 18px;
+          height: 18px;
+        }
+        .btn-text {
+          // float: right;
+          margin: 18px 11px 0 80px;
+          color: $black;
+          font-size: 14px;
+          letter-spacing: 0.2px;
+          font-family: "Roboto";
+          
+
+        }
+        &:hover {
+          box-shadow: 0 0 6px $google-blue;
+        }
+        &:active {
+          background: $white;
+        }
+      }
       }
     }
     .bottomAccount {
@@ -188,7 +234,7 @@
         .form {
           margin: 0 auto;
           padding: 0;
-          max-width: 50%;
+          max-width: 100%;
           width: 100%;
           color: $black;
         }
@@ -230,6 +276,8 @@
         background: $black;
         width: 100%;
         height: 100%;
+
+      
     
         .form {
           justify-content: center;
@@ -258,6 +306,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
+            // flex-direction: column-reverse;
             padding-bottom: 15px;
     
             .signup-btn,
