--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -55,6 +55,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin: auto;
     padding: 3%;
     border-radius: 4px;
@@ -67,7 +68,7 @@
       // margin: auto;
       // padding: 3% 0;
       // max-width: 320px;
-      width: 100%;
+      width: 50%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -118,7 +119,7 @@
           // align-self: end;
           border: none;
           width: 100%;
-          max-width: 50%;
+          max-width: 100%;
           height: 50px;
           border-radius: 4px;
           background: #00e6bc;
@@ -128,7 +129,7 @@
         
       //Gogole Sign in btn
       .google-btn {
-        width: 50%;
+        width: 100%;
         height: 50px;
         background-color: $white;
         border-radius: 4px;
@@ -144,7 +145,7 @@
           background-color: $white;
         }
         .google-icon {
-          position: absolute;
+          // position: absolute;
           margin-top: 11px;
           margin-left: 11px;
           width: 18px;
@@ -152,7 +153,7 @@
         }
         .btn-text {
           // float: right;
-          margin: 18px 11px 0 80px;
+          margin:  7% 2% 0 30%;
           color: $black;
           font-size: 14px;
           letter-spacing: 0.2px;
@@ -238,6 +239,13 @@
           width: 100%;
           color: $black;
         }
+        .btn-container {
+        .google-btn {
+        .btn-text {
+          // float: right;
+          margin:  4% 2% 0 38%;
+        }
+      }
       }
     }
   }
@@ -315,12 +323,18 @@
               border: none;
               width: 100%;
               max-width: 100%;
-              height: 36px;
+              height: 50px;
               border-radius: 4px;
               background: #00e6bc;
-              color: $white;
+             
               font-size: 14px;
               margin-top:3%;
+            }
+            .google-btn {
+              width:100%;
+              .btn-text {
+                // float: right;
+                margin: 4% 2% 0 35%;
             }
           }
         }
@@ -342,7 +356,8 @@
         }
       }
     
-
+    }
   }
   }
+}
 }
