add facebook button and clean up design on login and signup page

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $turqoise1: hsl(169, 100%, 50%);
 $turqoise2: hsl(169, 100%, 45%);
 $turqoise3: hsl(169, 100%, 35%);
-
+$turqoise: #00B392;
 $stargold: #ffb400; 
 
 $gray1:  #D8D8D8;
