--- a/src/scss/components/_onboardingNavLinks.scss
+++ b/src/scss/components/_onboardingNavLinks.scss
@@ -32,6 +32,7 @@
     display: flex;
     justify-content: flex-start;
     margin-top: 2%;
-    
+    font-size: 20px;
+    // text-decoration: none;
   }
 }
