--- a/src/scss/components/_onboarding.scss
+++ b/src/scss/components/_onboarding.scss
@@ -263,6 +263,13 @@
       display: flex;
       justify-content: center;
     }
+    // .about-us{
+    //   display: flex;
+    
+    //   justify-content: space-evenly;
+    // text-align: center;
+    // font-size: 14px;
+    // }
   }
 
   @media (max-width: 1068px) {
@@ -359,7 +366,7 @@
         .fancy span:after {
           content: "";
       
-          width: 700%;
+          width: 800%;
         }
             .google-btn {
               .btn-text {
